// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchComponent should match the snapshot for a desktop viewport 1`] = `
<div>
  <div
    class="content-wrapper-md text-center"
    data-testid="wrapper"
  >
    <div>
      SearchFormComponent Mock
    </div>
    <div>
      SearchResultsComponent Mock
    </div>
  </div>
</div>
`;

exports[`SearchComponent should match the snapshot for a tablet viewport 1`] = `
<div>
  <div
    class="content-wrapper-md"
    data-testid="wrapper"
  >
    <div>
      SearchFormComponent Mock
    </div>
    <div>
      SearchResultsComponent Mock
    </div>
  </div>
</div>
`;
